--- a/landing_page/responsive_landing_page.html
+++ b/landing_page/responsive_landing_page.html
@@ -42,6 +42,10 @@
       .features { grid-template-columns: 1fr; }
       .hero h1 { font-size: 2rem; }
     }
+
+    body {
+        background-color: #E0F7FA;
+      }
   </style>
 </head>
 <body>
